# Task-1-Ahmed_El-Nasri

./: README.md  ik_trajectory_node.py  package.xml  setup.py
urdf/: industrial_arm.urdf
